Fixed flÃoating action button, added function for no vehicles in database

--- a/app/src/main/res/layout/fragment_car_list.xml
+++ b/app/src/main/res/layout/fragment_car_list.xml
@@ -19,6 +19,31 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/vehicles_warning"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/image"
+            android:layout_width="95dp"
+            android:layout_height="95dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/overturned_vehicle_svgrepo_com"
+            app:layout_constraintBottom_toTopOf="@+id/description"
+            app:layout_constraintEnd_toEndOf="@+id/description"
+            app:layout_constraintStart_toStartOf="@+id/description"
+            app:riv_corner_radius="20dip"
+            android:visibility="gone"
+            app:riv_mutate_background="true" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_cars_fab"
             android:layout_width="wrap_content"
