Added API for fuel and types of car retrieving

--- a/app/src/main/res/layout-sw600dp/fragment_add_car.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_add_car.xml
@@ -79,6 +79,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/type_input"
             android:layout_width="316dp"
+            android:focusable="false"
+            android:longClickable="false"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:maxLines="1" />
@@ -96,6 +98,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fuel_input"
+            android:focusable="false"
+            android:longClickable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
@@ -116,6 +120,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/chilometer_input"
             android:layout_width="match_parent"
+            android:maxLength="9"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:maxLines="1" />
