--- a/app/src/main/res/layout-land/fragment_add_car.xml
+++ b/app/src/main/res/layout-land/fragment_add_car.xml
@@ -80,6 +80,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/type_input"
             android:layout_width="316dp"
+            android:focusable="false"
+            android:longClickable="false"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:maxLines="1" />
@@ -98,6 +100,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fuel_input"
             android:layout_width="match_parent"
+            android:focusable="false"
+            android:longClickable="false"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:maxLines="1" />
@@ -117,6 +121,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/chilometer_input"
             android:layout_width="match_parent"
+            android:maxLength="9"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:maxLines="1" />
