--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -84,6 +84,8 @@
                 android:id="@+id/type_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:longClickable="false"
                 android:inputType="textMultiLine"
                 android:maxLines="1"
                 android:singleLine="true"/>
@@ -101,6 +103,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fuel_input"
+                android:focusable="false"
+                android:longClickable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
