--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -94,7 +94,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fuel"
-            android:layout_width="140dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="@string/fuel"
@@ -103,13 +103,13 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fuel_input"
-                android:focusable="false"
-                android:longClickable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 android:inputType="textMultiLine"
+                android:longClickable="false"
                 android:maxLines="1"
-                android:singleLine="true"/>
+                android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -169,6 +169,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/displacement_input"
                 android:layout_width="match_parent"
+                android:maxLength="4"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLines="1"
