--- a/app/src/main/res/layout/list_item_car.xml
+++ b/app/src/main/res/layout/list_item_car.xml
@@ -19,6 +19,7 @@
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/image"
             android:scaleType="centerInside"
+            android:maxLines="1"
             android:layout_width="95dp"
             android:layout_height="95dp"
             app:riv_corner_radius="20dip"
@@ -32,9 +33,10 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="30dp"
             android:textSize="23sp"
+            android:maxLines="1"
             android:text="@{cars.name}"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
@@ -45,8 +47,9 @@
         <TextView
             android:id="@+id/model"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="8dp"
+            android:maxLines="1"
             android:text="@string/modelInf"
             android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +59,8 @@
         <TextView
             android:id="@+id/modelInfo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:layout_height="match_parent"
             android:layout_marginStart="5dp"
             android:layout_marginTop="8dp"
             android:text="@{cars.model}"
@@ -77,7 +81,8 @@
         <TextView
             android:id="@+id/plateInfo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:maxLines="1"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/plateInf"
@@ -89,8 +94,8 @@
         <TextView
             android:id="@+id/plate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
+            android:maxLines="1"
             android:layout_marginStart="5dp"
             android:text="@{cars.license}"
             android:textAppearance="?attr/textAppearanceBody2"
