--- a/app/src/main/res/layout/fragment_add_car.xml
+++ b/app/src/main/res/layout/fragment_add_car.xml
@@ -23,6 +23,8 @@
                 android:id="@+id/name_input"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:maxLength="16"
+                android:longClickable="false"
                 android:inputType="textAutoComplete"
                 android:maxLines="1"
                 android:singleLine="true" />
@@ -42,7 +44,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/model_input"
                 android:layout_width="match_parent"
+                android:maxLength="20"
                 android:layout_height="match_parent"
+                android:longClickable="false"
                 android:inputType="textAutoComplete"
                 android:maxLines="1"
                 android:singleLine="true"/>
@@ -63,6 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:longClickable="false"
                 android:maxLength="4"
                 android:maxLines="1"
                 android:singleLine="true"/>
@@ -125,6 +130,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/chilometer_input"
                 android:layout_width="match_parent"
+                android:longClickable="false"
                 android:layout_height="match_parent"
                 android:maxLength="9"
                 android:inputType="number"
@@ -148,6 +154,7 @@
                 android:id="@+id/license_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:longClickable="false"
                 android:inputType="textMultiLine"
                 android:maxLength="7"
                 android:maxLines="1"
@@ -172,6 +179,7 @@
                 android:maxLength="4"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:longClickable="false"
                 android:maxLines="1"
                 android:singleLine="true"/>
 
