--- a/app/src/main/res/layout/fragment_cars_detail.xml
+++ b/app/src/main/res/layout/fragment_cars_detail.xml
@@ -10,26 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/divider_license2"
-            android:layout_width="1dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="8dp"
-            android:background="?attr/dividerVertical"
-            app:layout_constraintBottom_toBottomOf="@+id/name"
-            app:layout_constraintStart_toEndOf="@+id/name"
-            app:layout_constraintTop_toTopOf="@+id/model2" />
-
         <TextView
             android:id="@+id/model2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            app:layout_constraintBottom_toBottomOf="@+id/name"
-            app:layout_constraintStart_toEndOf="@+id/divider_license2"
-            app:layout_constraintTop_toTopOf="@+id/name"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/divider_model"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name"
             tools:text="Model" />
 
         <TextView
@@ -37,10 +29,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="@+id/divider_model"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/model2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image"
             tools:text="Name" />
 
@@ -50,9 +45,10 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_margin="16dp"
+            android:layout_marginTop="8dp"
             android:background="?attr/dividerHorizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/model2" />
 
         <ImageView
             android:id="@+id/ic_calendar"
