--- a/app/src/main/res/layout-land/fragment_cars_detail.xml
+++ b/app/src/main/res/layout-land/fragment_cars_detail.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:maxLines="1"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
             app:layout_constraintBottom_toBottomOf="@+id/name"
@@ -36,6 +37,7 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:layout_marginTop="8dp"
             android:textAllCaps="true"
             android:textAppearance="?attr/textAppearanceHeadline6"
